add_subdirectory(_libLearnOpenGL)
# add_subdirectory(2.lighting)
# add_subdirectory(3.model_loading)
add_subdirectory(4.advanced_opengl)
add_subdirectory(5.advanced_lighting)
add_subdirectory(6.pbr)
add_subdirectory(7.in_practice)
#add_subdirectory(0.water)
#add_subdirectory(1.advanced_lighting)
#add_subdirectory(5.2.steep_parallax_mapping)
#add_subdirectory(6.hdr)
#add_subdirectory(7.bloom)
#add_subdirectory(2.gamma_correction)
#add_subdirectory(3.1.3.shadow_mapping)
#add_subdirectory(3.2.2.point_shadows_soft)
#add_subdirectory(3.3.csm)
#add_subdirectory(4.normal_mapping)
#add_subdirectory(5.1.parallax_mapping)
#add_subdirectory(5.3.parallax_occlusion_mapping)
#add_subdirectory(5.4.steep_parallax_mapping-jungle)
#add_subdirectory(5.5.steep_parallax_mapping-cliff)
#add_subdirectory(5.6.steep_parallax_mapping-water)
#add_subdirectory(5.7.steep_parallax_mapping-tile1)
#add_subdirectory(5.8.steep_parallax_mapping-tile2)
#add_subdirectory(5.9.steep_parallax_mapping-wall)
#add_subdirectory(9.ssao)

# Copy media:
set(SRC_DIR ${CMAKE_CURRENT_LIST_DIR}/media)
set(DST_DIR ${CMAKE_RUNTIME_OUTPUT_DIRECTORY})
file(COPY ${SRC_DIR} DESTINATION ${DST_DIR})
