#add_subdirectory(de-win32api)
#add_subdirectory(de-glew-2.1.0)
#add_subdirectory(de-glfw-3.3.2)
add_subdirectory(libGLUS)

add_subdirectory(Example01_clear)
add_subdirectory(Example02_simple)
add_subdirectory(Example03_grey)
add_subdirectory(Example04_color)
add_subdirectory(Example05_phong)
add_subdirectory(Example06_texture)

add_subdirectory(Example07_normmap)
add_subdirectory(Example08_cubemap)
add_subdirectory(Example09_particle)
add_subdirectory(Example10_dublicate)
add_subdirectory(Example11_glass)
add_subdirectory(Example12_shadow)
add_subdirectory(Example13_tessellation)

add_subdirectory(Example14_passes)
add_subdirectory(Example15_water)
add_subdirectory(Example16_phong)
add_subdirectory(Example17_phong_clip)
add_subdirectory(Example18_phong)
add_subdirectory(Example19_multi_proj)
add_subdirectory(Example20_checker)

add_subdirectory(Example21_texture)
add_subdirectory(Example22_shadowvolume)
add_subdirectory(Example23_tessellation)
add_subdirectory(Example24_erode)
add_subdirectory(Example25_phong_textured)

add_subdirectory(Example26_fur)
add_subdirectory(Example27_shadow)
add_subdirectory(Example28_ssao_blur)
add_subdirectory(Example29_raytrace)
add_subdirectory(Example30_raytrace)
add_subdirectory(Example31_deferred_shading)
add_subdirectory(Example32_brdf)
add_subdirectory(Example33_brdf)
add_subdirectory(Example34_depthmap)
add_subdirectory(Example35_depth_peel)
add_subdirectory(Example36_phong)
add_subdirectory(Example37_raymarching)
add_subdirectory(Example38_pipeline)
add_subdirectory(Example39_pipeline)
add_subdirectory(Example40_cloth)
add_subdirectory(Example41_ocean)
add_subdirectory(Example42_fxaa)
add_subdirectory(Example43_phong_textured)
add_subdirectory(Example44_conservative)
add_subdirectory(Example45_voxelize)